--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <div class="container">
-        <div class="jumbotron"><h1><center>Trivia Game</center></h1></div>
+        <div class="jumbotron">
+            <h1>
+                <center>Trivia Game</center>
+            </h1>
+        </div>
         <!--- CSS -->
         <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="assets/css/style.css">
@@ -25,39 +29,27 @@
             <div id="container">
                 <br>
                 <div id="questions">
-                    <div id="question1" class="question-tab">
-                    <div id="q1a"></div>
-                    <div id="q1b"></div>
-                    <div id="q1c"></div>
-                    <div id="q1d"></div>
-
-                    </div><br><hr>
-                    <div id="question2" class="question-tab"></div><br><hr>
-                    <div id="question3" class="question-tab"></div><br><hr>  
-                    <div id="question4" class="question-tab"></div><br><hr> 
-                     <div id="question5" class="question-tab"></div><br><hr>  
-                     <div id="question6" class="question-tab"></div><br><hr>
-                     <div id="question7" class="question-tab"></div><br><hr>
-                     <div id="question8" class="question-tab"></div><br><hr>
-                    </div>
-                </div>
+                    <div id="question1" class="question-tab"> </div>
+                    <div id="answers" class="answers"></div>
 
                 </div>
-
-
 
             </div>
 
 
 
+    </div>
 
 
 
 
-            <!-- Game Panel - what kind of questions do I want? What theme do I want?-->
-            <!-- Black 90's theme: in Living Color, Living Single, A Different World, The Cosby Show, The Proud Family, Martin, Fresh Prince, Boomerang!, Love Jones, Poetic Justice, Crooklyn, Love & Basketball-->
 
-            <!--In this classic 90's sitcom, what was the real name of the character who later became one of the greatest comedians of all time?
+
+
+    <!-- Game Panel - what kind of questions do I want? What theme do I want?-->
+    <!-- Black 90's theme: in Living Color, Living Single, A Different World, The Cosby Show, The Proud Family, Martin, Fresh Prince, Boomerang!, Love Jones, Poetic Justice, Crooklyn, Love & Basketball-->
+
+    <!--In this classic 90's sitcom, what was the real name of the character who later became one of the greatest comedians of all time?
 College Campuses were very different back in the 90's. Which Black sitcom took place on the set of a Historically Black College/University?
 They initially met in a hair salon in Los Angeles, but thier love ascended on thier way to The Bay Area for a hair show. What 90's Black cinema, starring two of the most famous artists, does the initial question refer to?
 Eddie Murphy co-starred alongside which bombshell in the movie <i>Boomerang!</i>?
@@ -85,11 +77,11 @@ A staple Black sitcom on Disney channel, this show is about a young girl who had
 
 
 
-            <!-- JQuery Lib Import -->
-            <script type="text/javascript" src="assets/javascript/app.js">
-            </script>
+    <!-- JQuery Lib Import -->
+    <script type="text/javascript" src="assets/javascript/app.js">
+    </script>
 
 
-        </body>
+    </body>
 
 </html>
