--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <body>
 
-            <button>Start</button>
+            <button id = "start">Start</button>
 
             <div id="container">
                 <br>
