--- a/index.html
+++ b/index.html
@@ -9,22 +9,23 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <!--- CSS -->
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+
+    <body>
+
     <div class="container">
         <div class="jumbotron">
-            <h1>
-                <center>Trivia Game</center>
-            </h1>
+            <h1>Trivia Game</h1>
         </div>
-        <!--- CSS -->
-        <link rel="stylesheet" href="assets/css/reset.css">
-        <link rel="stylesheet" href="assets/css/style.css">
 
         <!-- jQuery script tag-->
         <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 
         <body>
 
-            <button id = "start">Start</button>
+            <button id="start">Start</button>
 
             <div id="container">
                 <br>
@@ -39,6 +40,7 @@
 
 
     </div>
+</body>
 
 
 
